fixed arrow container overflow in project component

--- a/client/components/Projects.scss
+++ b/client/components/Projects.scss
@@ -2,6 +2,7 @@
 
 .projects {
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 /* */
